add price product by user & reseller
